--- a/style.css
+++ b/style.css
@@ -11,10 +11,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     padding-top: 50px; /* Adjust this value as needed */
-}
-.content {
-    display: flex;
-    flex: 1;
+    background-color: #d4e9ee;
 }
 
 
@@ -22,11 +19,12 @@ body {
 .sidebar {
     background-color: #333;
     color: white;
-    width: 200px; /* Adjust the width as needed */
+    width: 190px; /* Adjust the width as needed */
     position: fixed;
-    top: 50px; /* Start the sidebar 50px from the top */
-    bottom: 50%; /* Sidebar height is 50% of the viewport height */
     overflow-y: auto;
+    border-radius: 10px; 
+    border: 2px solid #000000;
+    height: 35%;
 }
 
 .menu ul {
@@ -55,10 +53,6 @@ body {
     font-size: 24px; /* Adjust size as needed */
 }
 
-.social-media a i {
-    color: white;
-    font-size: 24px; /* FontAwesome icon size */
-}
 
 /* Main content styles */
 main {
@@ -74,23 +68,32 @@ section {
     background-color: #65858d; /* Darker orange background */
     color: white;
     padding: 40px 20px;
-}
-
-.intro-content {
-    max-width: 800px;
-    margin: auto;
-}
-
-.intro-buttons button {
-    background-color: #e7e7e7; /* Light grey background */
-    border: none;
-    padding: 10px 20px;
-    margin-right: 10px;
-    cursor: pointer;
+    border-radius: 10px; 
+    border: 2px solid #000000;
+    width: 95%;
 }
 
 #about {
-    background-color: #ffd9b3; /* Lighter orange background */
+    margin-top: 20px;
+    border-radius: 10px; 
+    border: 2px solid #000000;  
+    width: 95%;
+    height: 330px;
+}
+
+#about ul {
+    margin-top: 15px;
+    list-style: none;
+    padding: 1;
+}
+
+#about ul li {
+    background: #bdd9e0;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 2px solid #65858d;
+
+
 }
 
 /* Add styles for additional sections as needed */
