--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ section {
     border-radius: 10px; 
     border: 2px solid #000000;  
     width: 95%;
-    height: 515px;
+    height: 530px;
 }
 /* Section for impasse game */
 #impasse {
@@ -241,6 +241,26 @@ section {
     width: 95%;
     height: 200px;
 }
+
+/*Section for compression and decompression software*/
+
+#cmpsoft {
+    margin-bottom: 35px;
+    border-radius: 10px; 
+    border: 2px solid #000000;  
+    width: 95%;
+    height: 200px;
+}
+
+/*Section for website for wedding table allocation*/
+#wedtable{
+    margin-bottom: 35px;
+    border-radius: 10px; 
+    border: 2px solid #000000;  
+    width: 95%;
+    height: 200px;
+}
+
 /*style for table */
 #marks table {
     table-layout: fixed;
@@ -275,7 +295,6 @@ section {
     width: 169px;      
     height: auto;       
     border: 2px solid black; 
-
 }
 
 #tictactoeimg {
