--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ section {
     border-radius: 10px; 
     border: 2px solid #000000;  
     width: 95%;
-    height: 475px;
+    height: 520px;
 }
 
 #academic ul {
@@ -217,6 +217,42 @@ section {
     width: 95%;
     height: 890px;
 }
+
+/*Section for programming languages*/
+
+#programming_lang{
+    margin-top: 25px;
+    margin-bottom: 35px;
+    border-radius: 10px;
+    border: 2px solid black;
+    width: 95%;
+    height: 500px;
+}
+
+#programming_lang ul {
+    margin-top: 10px;
+    list-style: none;
+    padding: 1;
+}
+
+#programming_lang ul li {
+    background: #bdd9e0;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    padding: 10px;
+    border: 2px solid #65858d;
+}
+
+/*Section for instagram clone app*/
+#insta_clone{
+    margin-top: 25px;
+    margin-bottom: 35px;
+    border-radius: 10px;
+    border: 2px solid black;
+    width: 95%;
+    height: 500px;
+}
+
 
 /* Section for Tic tac Toe game */
 #tictactoe {
